# django-datatable-view

./: CHANGELOG.md  README.md  pyproject.toml
datatableview/: columns.py  compat.py  datatables.py  helpers.py
datatableview/views/: base.py
