[tool.poetry]
name = "datalive-datatableview"
version = "0.10.0"
description = "Fork of pivotal-energy-solutions/django-datatable-view"
authors = ["Datalive Software <info@datalive.com.au>"]
license = "Apache License 2.0"
packages = [
    { include = "datatableview" }
]

[tool.poetry.dependencies]
python = ">=3.8"
python-dateutil = ">=2.1"
django = ">=2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
